--- a/index.html
+++ b/index.html
@@ -2,10 +2,24 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/faviconV2.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Insider JS Case project demonstrating Vue.js capabilities." />
-    <title>insider-js-case-1</title>
+    <title>Insider Toast Notification Builder</title>
+    <meta name="description" content="A powerful and customizable toast notification generator built with Vue 3 and TypeScript." />
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://insider-ts-case.vercel.app/" />
+    <meta property="og:title" content="Insider Toast Notification Builder" />
+    <meta property="og:description" content="A powerful and customizable toast notification generator built with Vue 3 and TypeScript." />
+    <meta property="og:image" content="https://insider-ts-case.vercel.app/android-chrome-512x512.png" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://insider-ts-case.vercel.app/" />
+    <meta property="twitter:title" content="Insider Toast Notification Builder" />
+    <meta property="twitter:description" content="A powerful and customizable toast notification generator built with Vue 3 and TypeScript." />
+    <meta property="twitter:image" content="https://insider-ts-case.vercel.app/android-chrome-512x512.png" />
   </head>
   <body>
     <div id="app"></div>
