feat: Initialize project with core notification constants, preset management, local storage utilities, slider drag composable, and basic routing with updated favicon and meta tags.

--- a/index.html
+++ b/index.html
@@ -2,24 +2,22 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/faviconV2.png" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Insider Toast Notification Builder</title>
+    <title>Toast Simulator</title>
     <meta name="description" content="A powerful and customizable toast notification generator built with Vue 3 and TypeScript." />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://insider-ts-case.vercel.app/" />
-    <meta property="og:title" content="Insider Toast Notification Builder" />
+    <meta property="og:url" content="https://toast-sim.vercel.app/" />
+    <meta property="og:title" content="Toast Simulator" />
     <meta property="og:description" content="A powerful and customizable toast notification generator built with Vue 3 and TypeScript." />
-    <meta property="og:image" content="https://insider-ts-case.vercel.app/android-chrome-512x512.png" />
 
     <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://insider-ts-case.vercel.app/" />
-    <meta property="twitter:title" content="Insider Toast Notification Builder" />
+    <meta property="twitter:card" content="summary" />
+    <meta property="twitter:url" content="https://toast-sim.vercel.app/" />
+    <meta property="twitter:title" content="Toast Simulator" />
     <meta property="twitter:description" content="A powerful and customizable toast notification generator built with Vue 3 and TypeScript." />
-    <meta property="twitter:image" content="https://insider-ts-case.vercel.app/android-chrome-512x512.png" />
   </head>
   <body>
     <div id="app"></div>
